--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Un progetto per recuperare dati dai PureStorage",
   "main": "main.js",
   "scripts": {
+    "start": "node ." , 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
